// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components Pagination disables back link if we are on the first page 1`] = `
<div
  className="container"
>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-center"
    >
      <li
        className="page-item disabled"
      >
        <a
          className="page-link"
          href="/blog/0"
        >
          <i
            className="fa fa-caret-left"
          />
        </a>
      </li>
      <li
        className="page-item active"
      >
        <a
          className="page-link"
          href="/blog/"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/2"
        >
          2
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/3"
        >
          3
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/4"
        >
          4
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/5"
        >
          5
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/2"
        >
          <i
            className="fa fa-caret-right"
          />
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`components Pagination disables next link if we are on the last page 1`] = `
<div
  className="container"
>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-center"
    >
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/4"
        >
          <i
            className="fa fa-caret-left"
          />
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/2"
        >
          2
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/3"
        >
          3
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/4"
        >
          4
        </a>
      </li>
      <li
        className="page-item active"
      >
        <a
          className="page-link"
          href="/blog/5"
        >
          5
        </a>
      </li>
      <li
        className="page-item disabled"
      >
        <a
          className="page-link"
          href="/blog/6"
        >
          <i
            className="fa fa-caret-right"
          />
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`components Pagination renders correctly 1`] = `
<div
  className="container"
>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-center"
    >
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/2"
        >
          <i
            className="fa fa-caret-left"
          />
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/"
        >
          1
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/2"
        >
          2
        </a>
      </li>
      <li
        className="page-item active"
      >
        <a
          className="page-link"
          href="/blog/3"
        >
          3
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/4"
        >
          4
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/5"
        >
          5
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/4"
        >
          <i
            className="fa fa-caret-right"
          />
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`components Pagination renders correctly if it links to the first page 1`] = `
<div
  className="container"
>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-center"
    >
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/"
        >
          <i
            className="fa fa-caret-left"
          />
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/"
        >
          1
        </a>
      </li>
      <li
        className="page-item active"
      >
        <a
          className="page-link"
          href="/blog/2"
        >
          2
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/3"
        >
          3
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/4"
        >
          4
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/5"
        >
          5
        </a>
      </li>
      <li
        className="page-item"
      >
        <a
          className="page-link"
          href="/blog/3"
        >
          <i
            className="fa fa-caret-right"
          />
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
